Split Ai and alone mode

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
             android:name=".GameActivity"
             android:exported="true"
             android:theme="@style/Theme.TicTacToe" />
+        <activity
+            android:name=".GameAIActivity"
+            android:exported="true"
+            android:theme="@style/Theme.TicTacToe" />
     </application>
 
 </manifest>
